# url_shortner_service

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: db.rs  main.rs  routes.rs  utils.rs
