[package]
name = "url_shortner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
bloomfilter = "1.0.13"
diesel = "2.1.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha1 = "0.10.6"
sha2 = "0.10.8"
tokio = "1.35.0"
tokio-postgres = "0.7.10"
